<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleGuidline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.7"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuidline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuidline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.85"
        android:orientation="vertical"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDispute"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topGuidline"
        app:layout_constraintBottom_toTopOf="@id/topSpace"
        app:layout_constraintStart_toEndOf="@id/startGuidline"
        app:layout_constraintEnd_toStartOf="@id/endGuidline"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/mid_blue"
        android:transitionName="@string/shared_element_dispute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:src="@drawable/dispute"
                android:scaleType="centerCrop"
                android:contentDescription="@string/open_dispute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:text="@string/open_dispute"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:id="@+id/topSpace"
        android:layout_width="0dp"
        android:layout_height="15dp"
        app:layout_constraintStart_toEndOf="@id/startGuidline"
        app:layout_constraintTop_toBottomOf="@id/cardViewDispute"
        app:layout_constraintEnd_toStartOf="@id/endGuidline"
        app:layout_constraintBottom_toTopOf="@id/cardViewMeeting"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMeeting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topSpace"
        app:layout_constraintBottom_toTopOf="@id/middleGuidline"
        app:layout_constraintStart_toEndOf="@id/startGuidline"
        app:layout_constraintEnd_toStartOf="@id/endGuidline"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/mid_blue"
        android:transitionName="@string/shared_element_appointment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:src="@drawable/appointment"
                android:scaleType="centerCrop"
                android:contentDescription="@string/open_dispute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:text="@string/set_up_appointment"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMoreOnWeb"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/middleGuidline2"
        app:layout_constraintBottom_toTopOf="@id/bottomGuidline"
        app:layout_constraintStart_toEndOf="@id/startGuidline2"
        app:layout_constraintEnd_toStartOf="@id/bottomSpace"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/mid_blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more_about_us_ob_the_web"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:gravity="center"/>
    </androidx.cardview.widget.CardView>

    <Space
        android:id="@+id/bottomSpace"
        android:layout_width="10dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/cardViewMoreOnWeb"
        app:layout_constraintTop_toBottomOf="@id/middleGuidline2"
        app:layout_constraintEnd_toStartOf="@id/cardViewContactUs"
        app:layout_constraintBottom_toTopOf="@id/bottomGuidline"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContactUs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/middleGuidline2"
        app:layout_constraintBottom_toTopOf="@id/bottomGuidline"
        app:layout_constraintStart_toEndOf="@id/bottomSpace"
        app:layout_constraintEnd_toStartOf="@id/endGuidline2"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/mid_blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contact_us"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:gravity="center" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>